CMBSandbox4/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Responded__c</fullName>
        <formula>&quot;First Responded Date:&quot; &amp; &quot; &quot; &amp;  text(FirstRespondedDate) &amp; BR() &amp;
 &quot;Responded:&quot; &amp; &quot; &quot; &amp;  Text(If(HasResponded=true,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Responded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <inlineHelpText>Date that the gift was sent. Or other types</inlineHelpText>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;https://cloudmybiz.my.salesforce.com/&quot; &amp; Id &amp; &quot;/e?retURL=%2F00O60000003jorD&quot; , &quot;Edit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocholates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Formula__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date (Formula)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT(Lead.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account that was referred</inlineHelpText>
        <label>Referred Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>